@@ -2,6 +2,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    [Bugs fixed]
+    - Having multiple RPC added will not block and wait each others from reading from stream.
 
 0.007     2021-05-21 14:22:03+00:00 UTC
     [Bugs fixed]
